--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						</div>
 						<p><strong>Aros michi 2</strong><br/>
 							$3300<br/>
-							Aros de michi, en plata 925.
+							Aros de michi, en plata 925 ♥
 						</p>
 					</div>
 				</section>
