--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<img src="imagenes/aros_michi_amatista.png" alt="Aros" title="Aros"/>
 						</div>
 						<p><strong>Aros michi 1</strong><br/>
-							$6600<br/>
+							$6800<br/>
 							Aros de michi en plata 925, con piedras a elección.<br/>
 							Consultar piedras disponibles!
 						</p>
@@ -107,7 +107,7 @@
 							<img src="imagenes/aros_michi_simples.png" alt="aros" title="aros"/>
 						</div>
 						<p><strong>Aros michi 2</strong><br/>
-							$3300<br/>
+							$3800<br/>
 							Aros de michi, en plata 925 ♥
 						</p>
 					</div>
@@ -119,7 +119,7 @@
 							<img src="imagenes/aros_michi_citrino.png" alt="aros" title="aros"/>
 						</div>
 						<p><strong>Aros michi 3</strong><br/>
-							$6600<br/>
+							$6800<br/>
 							Aros con piedras a elección. Plata 925.
 							Consultar por piedras disponibles :)
 						</p>
@@ -165,9 +165,9 @@
 						<div class=producto_imagen>
 							<img src="imagenes/dijes_personalizados.png" alt="dije" title="dije"/>
 						</div>
-						<p><strong>Dije personalizado de mascota</strong><br/>
+						<p><strong>Dije personalizado de mascota - Plata 925</strong><br/>
 							$9600 <br/>
-							¡Personalizá tus mascotas en dijes de plata 925! <br/>
+							¡Llevá tu mascota con vos siempre! <br/>
 							Incluye cadena y argollita con inicial.
 						</p>
 					</div>
@@ -270,8 +270,8 @@
 						</div>
 						<p><strong>Dije ventana 1</strong><br/>
 							$7100<br/>
-							Plata 925. Dije con piedra curazo rutilado.
-							Calado por detrás con forma de ventana medieval con el símbolo de una gota en bronce. 
+							Plata 925. Dije con piedra cuarzo rutilado.
+							Calado por detrás con forma de ventana medieval con gota en bronce. 
 						</p>
 					</div>
 				</section>
@@ -283,7 +283,7 @@
 						</div>
 						<p><strong>Dije ventana 2</strong><br/>
 							$7100<br/>
-							Plata 925. Dije con piedra amatista trapiche y pequeño ónix negro.
+							Plata 925. Dije con piedra amatista trapiche y ónix negro.
 							Calado por detrás con forma de ventana medieval.
 						</p>
 					</div>
@@ -366,8 +366,7 @@
 							</div>
 							<p><strong>Anillo con sorpresa</strong><br/>
 								$9400<br/>
-								Anillo de plata 925 con piedra a elección y pequeño dibujo dentro.
-								El dibujo se puede personalizar con lo que quieras ♥
+								Anillo de plata 925 con piedra a elección y pequeño dibujo dentro a elección.
 							</p>
 						</div>
 					</section>
