--- a/contactos.html
+++ b/contactos.html
@@ -33,7 +33,7 @@
 
 				<div class="menu_desktop">
 					<ul>
-						<li><a href="index.html">inicio</a></li>
+						<li><a href="index.html">catálogo</a></li>
 						<li><a href="#">informacion</a></li>
 					</ul>
 				</div>
@@ -47,7 +47,7 @@
 						</button>
 
 						<ul class="dropdown-menu desplegable">
-						    <li><a class="dropdown-item item_menu" href="index.html">Inicio</a></li>
+						    <li><a class="dropdown-item item_menu" href="index.html">Catálogo</a></li>
 						    <li><a class="dropdown-item item_menu" href="#">Informacion</a></li>
 						</ul>
 					</div>
